# betwixt-rust

client/: .gitignore  Cargo.toml  index.html  index.js  package-lock.json  package.json  web.config
client/src/: camera.rs  controls.rs  dev_utils.rs  evloop.rs  gfx.rs  lib.rs  scene.rs  state.rs
client/src/gfx/: mod.rs  utils.rs
client/src/gfx/programs/: first.rs  image.rs  sprite.rs
client/src/gfx/shaders/: mod.rs
client/src/gfx/shaders/frag/: colorFromTexture.rs  color_from_texture.rs  mod.rs  white.rs
client/src/gfx/shaders/vert/: first.rs  mod.rs  texCords.rs
common/: Cargo.toml
common/src/: GameState.rs  Vector.rs  game_state.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs  tick.rs
