[package]
name = "client"
version = "0.1.0"
authors = ["sh-angl"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
js-sys = "0.3.19"
lazy_static = "1.3.0"
nalgebra = "0.23.0"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.18"
futures = "0.3.8"


[dependencies.web-sys]
version = "0.3.45"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlTexture',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "KeyboardEvent",
    "console",
    "EventListener",
    "HtmlImageElement"
]