[package]
name = "common"
version = "0.1.0"
authors = ["sh-angl <40544709+sh-angl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.116", features = ["derive"]}
bincode = "1.3.1"