[package]
name = "server"
version = "0.1.0"
authors = ["sh-angl <40544709+sh-angl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
env_logger = "0.7.1"
tokio = {version = "0.3.0", features = ["full"]}
serde = "1.0.116"
bincode = "1.3.1"
async-tungstenite = {version = "0.10.0", features = ["tokio-runtime"]}
